# midipix_build

./: .gitignore  000.fetch_git.build  000.lazy.build  003.psxstub.build  003.psxstub.vars  004.musl.no-complex.build  004.psxstub.vars  006.gcc.runtime.build  006.musl.build  006.musl.full.build  007.gcc.full.build  007.musl.full.build  008.gcc.full.build  008.gcc.libstdc++-v3.build  009.gcc.full.build  009.pkgconf_host.vars  010.pkgconf_host.vars  100.perk.build  100.perk.native.build  101.gmp.build  101.perk.cross.build  102.mpfr.build  102.perk.cross.build  104.libelf.build  104.libelf.vars  106.musl.native.build  107.gcc.native.build  107.musl.native.build  200.coreutils.build  200.dalist.build  200.psxtypes.build  200.psxtypes.vars  204.psxscl.build  207.libz.build  208.gzip.build  209.grep.build  300.bzip2.vars  300.coreutils.build  304.bash.vars  304.gawk.build  (+104 more)
env.d/: 000.build.env  050.paths.env  100.tools.env  300.config.cache.gnulib.env
etc/: LICENCE  README  README.md  build.msgs.C  build.msgs.en  build.theme  build.trans.theme  build.usage  build.usage.short  config.cache  config.guess  config.sub  midipix.sh  midipix_shortcut.vbs  package.spec  pkgtool.msgs.C  pkgtool.msgs.en  pkgtool.theme  pkgtool.usage  pkgtool.usage.short  python2.7-config  rotate_archives.sh  rtl.msgs.C  rtl.msgs.en
files/mandoc/: Makefile.am  configure.ac  extern_config.h
groups/: 000.host_tools.group  010.host_deps.group  015.host_deps_rpm.group  020.host_deps_rpm.group  020.host_toolchain.group  030.host_toolchain.group  100.native_tools.group  110.native_toolchain.group  120.native_runtime.group  130.native_packages_deps_deps.group  140.native_packages_deps.group  150.native_packages_deps_x11.group  160.native_packages.group  200.minipix.group  200.native_packages.group  201.native_packages.group  211.native_packages_cmdline.group  220.native_packages_dev.group  221.native_packages_dev.group  230.native_packages_etc.group  231.native_packages_etc.group  241.native_packages_inet.group  251.native_packages_lib.group  261.native_packages_x11.group  800.minipix.group  999.dist.group  999.invariants.group  dev_packages.group
groups.d/: 000.host_tools.group  010.host_deps.group  020.host_deps_rpm.group  030.cross_toolchain.group  030.host_toolchain.group  040.host_toolchain.group  100.native_tools.group  110.native_toolchain.group  120.native_runtime.group  200.native_packages.group  211.native_packages_cmdline.group  221.native_packages_dev.group  231.native_packages_etc.group  241.native_packages_inet.group  251.native_packages_lib.group  261.native_packages_x11.group  800.minipix.group  999.dist.group  dev_packages.group
patches/: algol68g-3.3.24_pre.local.patch  alsa-lib-1.1.4.1.local.patch  alsa_lib-1.1.4.1.local.patch  alsa_lib-1.1.8.local.patch  apk-tools-2.6.6.local.patch  apk-tools-2.6.8.local.patch  apk_tools-2.6.8.local.patch  apr-1.5.2.local.patch  apr-1.6.2.local.patch  apr-1.6.3.local.patch  apr-1.6.5.local.patch  apr-1.6.5_pre.local.patch  apr-util-1.5.4.local.patch  apr_util-1.6.0.local.patch  apr_util-1.6.1.local.patch  autoconf_2_64_host-2.64.local.patch  autoconf_2_69_host-2.69.local.patch  autoconf_host-2.69.local.patch  bas-2.6.local.patch  bas-2.6_pre.local.patch  bash-4.4-rc2.local.patch  bash-4.4.local.patch  bash-5.1.8.local.patch  bash-5.2_pre.local.patch  bash_minipix-4.4.local.patch  bash_minipix-5.1.16.local.patch  bash_minipix-5.1.8.local.patch  bash_minipix-5.1.local.patch  bash_minipix-5.2.15_pre.local.patch  bash_minipix-5.2.21_pre.local.patch  bash_minipix-5.2.9_pre.local.patch  bash_minipix-5.2_pre.local.patch  bc-1.07.1_pre.local.patch  bdwgc.local.patch  bdwgc_pre.local.patch  bearssl-0.6.local.patch  bind-9.11.0-P2.local.patch  bind-9.11.2.local.patch  bind-9.13.2.local.patch  bind-9.13.2_pre.local.patch  (+449 more)
scripts/: gcc.full.build  midipix_sh.build  musl.native.build
sigh/: python2.7-config
subr/: build.subr  build_args.subr  build_checks.subr  build_init.subr  check_updates.subr  ex_pkg.subr  ex_pkg_dispatch.subr  ex_pkg_env.subr  ex_pkg_exec.subr  ex_pkg_restart.subr  ex_pkg_state.subr  ex_pkg_steps.subr  ex_pkg_vars.subr  ex_rtl.subr  ex_rtl_complex.subr  ex_rtl_fetch.subr  ex_rtl_fileop.subr  ex_rtl_install.subr  ex_rtl_list.subr  ex_rtl_log.subr  ex_rtl_state.subr  ex_rtl_string.subr  ex_setup_args.subr  ex_setup_checks.subr  ex_setup_env.subr  ex_setup_subdirs.subr  mode_check_updates.subr  pkg.subr  pkg_000000.subr  pkg_all.subr  pkg_autoconf.subr  pkg_build.subr  pkg_build_clean.subr  pkg_build_dir.subr  pkg_clean.subr  pkg_configure.subr  pkg_configure_autotools.subr  pkg_configure_clean.subr  pkg_configure_patch.subr  pkg_configure_patch_pre.subr  (+57 more)
subr.ex/: ex_init.subr  ex_pkg.subr  ex_pkg_depends.subr  ex_pkg_dispatch.subr  ex_pkg_env.subr  ex_pkg_exec.subr  ex_pkg_restart.subr  ex_pkg_run.subr  ex_rtl.subr  ex_rtl_configure.subr  ex_rtl_make.subr  ex_rtl_midipix.subr  ex_rtl_rpm.subr  ex_rtl_run.subr
subr.pkg/: pkg_build.subr  pkg_build_clean.subr  pkg_clean.subr  pkg_configure.subr  pkg_configure_autotools.subr  pkg_configure_clean.subr  pkg_configure_patch.subr  pkg_configure_patch_pre.subr  pkg_fetch_clean.subr  pkg_fetch_download.subr  pkg_fetch_extract.subr  pkg_install.subr  pkg_install_clean.subr  pkg_install_files.subr  pkg_install_libs.subr  pkg_install_make.subr  pkg_install_rpm.subr  pkg_install_subdirs.subr
subr.rtl/: rtl.subr  rtl_complex.subr  rtl_fetch.subr  rtl_fetch_git.subr  rtl_fetch_wget.subr  rtl_fileop.subr  rtl_filepath.subr  rtl_install.subr  rtl_install_v2.subr  rtl_list.subr  rtl_log.subr  rtl_platform.subr  rtl_state.subr  rtl_string.subr
vars/: apr.vars  apr_util.vars  autoconf_2_64_host.vars  automake_1_11_6_host.vars  bash.vars  bash_minipix.vars  binutils.vars  binutils_build.vars  bison.vars  build.vars  busybox.vars  ca_certificates.vars  ca_certificates_minipix.vars  chainport.vars  chainport_host.vars  check_updates.vars  clang_host.vars  (+130 more)
vars.dist/: dist_minipix.vars  dist_zipdist.vars
vars.env.d/: 000.build.env  050.pathsvars.env  100.toolchain.env  200.targets.env  300.config.cache.env
(+549 files in other folders)
